# SpiSlaveLinux

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  conanfile.py  spi-mcspi-slave.c  spi-slave-dev.h
cmake/: sqpSpiSlaveLinuxConfig.cmake.in
public_include/: spi-slave-dev.h
